[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chronocatalog"
description = "Deterministic, verifiable naming for photo and video archives"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jakub Stefanski", email = "js@jakubstefanski.com" }]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    # Windows has no system timezone database for zoneinfo
    "tzdata; sys_platform == 'win32'",
]
keywords = ["photography", "video", "exif", "rename", "archive", "checksum", "raw", "sidecar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/chronocatalog/chronocatalog"
Repository = "https://github.com/chronocatalog/chronocatalog"
Changelog = "https://github.com/chronocatalog/chronocatalog/blob/main/CHANGELOG.md"
Issues = "https://github.com/chronocatalog/chronocatalog/issues"

[project.scripts]
chronocatalog = "chronocatalog.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.version]
path = "src/chronocatalog/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chronocatalog"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PT",  # pytest style
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
files = ["src/chronocatalog", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["chronocatalog"]
omit = ["*/__main__.py"]
